--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>4.2.0</version>
+            <version>5.0.0</version>
         </dependency>
     </dependencies> 
 -->
@@ -16,9 +16,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <groupId>uk.co.caprica</groupId>
     <artifactId>vlcj</artifactId>
-    <version>4.2.1-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
 
     <name>vlcj</name>
     <description>Java Framework for the vlc Media Player.</description>
@@ -66,7 +72,7 @@
         <connection>scm:git:git@github.com:caprica/vlcj.git</connection>
         <developerConnection>scm:git:git@github.com:caprica/vlcj.git</developerConnection>
         <url>git@github.com:caprica/vlcj.git</url>
-      <tag>HEAD</tag>
+        <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
@@ -77,7 +83,7 @@
     </distributionManagement>
 
     <properties>
-        <vlcjNatives.version>4.1.0</vlcjNatives.version>
+        <vlcjNatives.version>5.0.0-SNAPSHOT</vlcjNatives.version>
         <vlcjOsxStubs.version>1.0.0</vlcjOsxStubs.version>
     </properties>
 
